<resources>
    <string name="app_name">Shopping List</string>
    <string name="b2"></string>
    <string name="b1"></string>
    <string name="b3"></string>
    <string name="b4"></string>
    <string name="b5"></string>
    <string name="b6"></string>
    <string name="b7"></string>
    <string name="b8"></string>
    <string name="b9"></string>
    <string name="b10"></string>
    <string name="button">Add</string>
    <string name="apple">apple</string>
    <string name="mango">Mango</string>
    <string name="guava">Guava</string>
    <string name="a1">Add</string>
    <string name="a2">Add</string>
    <string name="a3">Add</string>

</resources>
